MDEV-6752 Trailing incomplete characters are not replaced to question marks on conversion